# TrenchBroom

./: .clang-format  .clang-tidy  .clangd  .cursorignore  .gitignore  .gitmodules  .lvimrc  .travis.yml  AGENTS.md  ActivatingTableView.h  ActivatingTableView.m  Alias.h  Alias.m  AliasFrame.h  AliasFrame.m  AliasFrameGroup.h  AliasFrameGroup.m  AliasManager.h  AliasManager.m  AliasNormals.h  AliasRenderer.h  AliasRenderer.m  AliasSkin.h  AliasSkin.m  AppDelegate.h  AppDelegate.m  ApplyFaceCursor.h  ApplyFaceCursor.m  ArrowFigure.h  ArrowFigure.m  Autosaver.h  Autosaver.m  BJMHLight  BUILD.md  BaseProperty.h  BaseProperty.m  BoundingBox.h  BoundingBox.m  BoundsFeedbackFigure.h  BoundsFeedbackFigure.m  (+654 more)
app/: CMakeLists.txt
app/CmdTool/: CMakeLists.txt
app/CmdTool/src/: Main.cpp
app/DumpShortcuts/: CMakeLists.txt
app/DumpShortcuts/src/: KeyStrings.h  Main.cpp
app/TrenchBroom/: CMakeLists.txt
app/TrenchBroom/cmake/: AppImageGenerator.cmake.in  CopyDirectoryIfConfig.cmake  GenerateChecksum.bat.in  GenerateManual.cmake  SignMacOsArchive.sh.in  TransformKeyboardShortcuts.cmake  TrenchBroom.manifest  TrenchBroom.rc.in
app/TrenchBroom/src/: Main.cpp
app/cmake/: AddVersionToManual.cmake  AddVersionToManual.cmake.in  AppImageGenerator.cmake.in  GenerateChecksum.sh.in  GenerateManual.cmake  GenerateResourceFile.cmake.in  PrintLinuxPackageInfo.sh.in  SignMacOsBundle.sh.in  TransformKeyboardShortcuts.cmake  TrenchBroom.rc.in
app/resources/documentation/: GameConfig.md  Icons.md
app/resources/games/: Daikatana.cfg  Generic.cfg  HalfLife.cfg  Hexen2.cfg  Nightfire.cfg  Quake.cfg  Quake2.cfg
app/resources/linux/: copyright  postinst  postrm  prerm  trenchbroom.desktop  trenchbroom.xml
app/resources/mac/: TrenchBroom-Info.plist
app/resources/qrc/: resources.qrc
app/resources/shader/: BrowserGroup.fragsh  BrowserGroup.vertsh  BrushEdge.fragsh  BrushEdge.vertsh  BrushFace.fragsh  BrushFace.vertsh  ClipHandle.vertsh  ColoredText.vertsh  Compass.fragsh  Compass.vertsh  CompassOutline.vertsh  Edge.fragsh  Edge.vertsh  EntityLink.fragsh  EntityLink.vertsh  EntityLinkArrow.vertsh  EntityModel.fragsh  EntityModel.vertsh  EntitySprite.fragsh  EntitySprite.vertsh  Face.fragsh  Face.vertsh  Grid.fragsh  Grid2D.fragsh  Grid2D.vertsh  Handle.fragsh  Handle.vertsh  LinkLine.fragsh  LinkLine.vertsh  MapBounds.fragsh  MaterialBrowser.fragsh  MaterialBrowser.vertsh  MaterialBrowserBorder.fragsh  MaterialBrowserBorder.vertsh  MiniMapEdge.fragsh  MiniMapEdge.vertsh  PointHandle.vertsh  RenderFlags.vertsh  Text.fragsh  Text.vertsh  (+11 more)
app/resources/styles/: base.qss
app/resources/stylesheets/: base.qss
app/src/: GLInit.cpp  GetVersion.cpp  Main.cpp  Main.h  TrenchBroom.rc  Version.h.in
app/version/: Version.h.in  incbuildno.bat  incbuildno.sh
common/: CMakeLists.txt
common/benchmark/: CMakeLists.txt
common/benchmark/src/: AABBTreeBenchmark.cpp  BenchmarkUtils.h  Main.cpp
common/cmake/: CppCheck.cmake  GenerateVersion.cmake  GenerateVersion.cmake.in
common/doc/: Tool Subsystem.graffle  Tool Subsystem.mdj
common/src/: AABBTree.h  Algorithms.h  Allocator.h  AttrString.cpp  AttrString.h  BBox.h  Bitset.h  ByteBuffer.h  CollectionUtils.h  Color.cpp  Color.h  ColorComponentType.h  ColorT.h  ColorVariantT.h  ConfigTypes.cpp  ConfigTypes.h  Constants.h  Contracts.cpp  Contracts.h  CoordinatePlane.h  Disjunction.cpp  Disjunction.h  DoublyLinkedList.h  EL.cpp  EL.h  ELInterpolator.cpp  ELInterpolator.h  Edge.h  Ensure.cpp  Ensure.h  Error.cpp  Error.h  Exceptions.cpp  Exceptions.h  FileLocation.cpp  FileLocation.h  FileLogger.cpp  FileLogger.h  FloatType.h  FreeType.h  (+144 more)
common/src/Assets/: AssetError.cpp  AssetError.h  AssetReference.h  AssetTypes.h  AssetUtils.h  Asset_Forward.h  AttributeDefinition.cpp  AttributeDefinition.h  Bsp29Model.cpp  Bsp29Model.h  ColorRange.cpp  ColorRange.h  CreateResource.h  DecalDefinition.cpp  DecalDefinition.h  DefaultEntityModel.cpp  DefaultEntityModel.h  EntityDefinition.cpp  EntityDefinition.h  EntityDefinitionFileSpec.cpp  EntityDefinitionFileSpec.h  EntityDefinitionGroup.cpp  EntityDefinitionGroup.h  EntityDefinitionManager.cpp  EntityDefinitionManager.h  EntityModel.cpp  EntityModel.h  EntityModelDataResource.cpp  EntityModelDataResource.h  EntityModelManager.cpp  EntityModelManager.h  EntityModel_Forward.h  EntitySpriteManager.cpp  EntitySpriteManager.h  ImageUtils.cpp  ImageUtils.h  Material.cpp  Material.h  MaterialCollection.cpp  MaterialCollection.h  (+36 more)
common/src/Base/: ColUtils.h  MapUtils.h  VecUtils.h  col_utils.h  map_utils.h  vec_utils.h  vector_set.h
common/src/Controller/: AddRemoveLayersCommand.cpp  AddRemoveLayersCommand.h  AddRemoveObjectsCommand.cpp  AddRemoveObjectsCommand.h  BrushVertexHandleCommand.cpp  BrushVertexHandleCommand.h  Command.cpp  Command.h  (+51 more)
common/test/: CMakeLists.txt
dump-shortcuts/: CMakeLists.txt
dump-shortcuts/src/: KeyStrings.cpp  KeyStrings.h  Main.cpp
lib/: CMakeLists.txt
lib/KdLib/: CMakeLists.txt
lib/TbBaseLib/: CMakeLists.txt  README.md
lib/TbElLib/: CMakeLists.txt  README.md
lib/TbFsLib/: CMakeLists.txt
lib/TbGlLib/: CMakeLists.txt  README.md
lib/TbMdlLib/: CMakeLists.txt  README.md
lib/TbPreferencesLib/: CMakeLists.txt  README.md
lib/TbRenderLib/: CMakeLists.txt
lib/TbUiLib/: CMakeLists.txt  README.md
lib/UpdateLib/: CMakeLists.txt
lib/VmLib/: CMakeLists.txt
lib/any-lite/: CMakeLists.txt
lib/base/: CMakeLists.txt
lib/cpp17/: CMakeLists.txt
lib/el/: CMakeLists.txt
lib/freeimage/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/fs/: CMakeLists.txt
lib/glew/: CMakeLists.txt
lib/googlemock/: CMakeLists.txt
lib/googletest/: CMakeLists.txt
lib/kdl/: CMakeLists.txt  LICENSE
lib/miniz/: CMakeLists.txt
lib/optional-lite/: CMakeLists.txt
lib/stackwalker/: CMakeLists.txt
lib/tinyxml2/: CMakeLists.txt
lib/upd/: # Update-Library  CMakeLists.txt  README.md
lib/update/: CMakeLists.txt
lib/variant-lite/: CMakeLists.txt
lib/vecmath/: CMakeLists.txt
lib/vm/: CMakeLists.txt
scripts/: README.md  build_target.py  list_cmake_targets.py  pyproject.toml
(+8972 files in other folders)
